# my-app/src/components/auth/register/types.ts
@@ -1,0 +1,9 @@
+export interface IRegister {
+    email: string,
+    password: string,
+    name: string,
+    lastName:string,
+    phone:string,
+    confirmPassword:string,
+    image: File | null
+}
